[tool.poetry]
name = "contacts"
version = "0.1.0"
description = ""
authors = ["Yuliia Chorna <yuli.chorna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic-extra-types = "^2.7.0"
phonenumbers = "^8.13.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
